@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.kivakit.ui.swing.component"
    
    interface Repeater
    
    class Components
    {
        --
        +void children(Container, Consumer<Component>)
        +T debugColor(T component)
        +void fadeIn(Component, Color, Duration update, int step)
        +void fadeOut(Component, Color, Duration update, int step)
        --(collection)--
        +java.util.List<T> items(JComboBox<T> dropdown)
    }
    
    JPanel <|-- KivaKitPanel
    Repeater <|-- KivaKitPanel
    class KivaKitPanel
    {
        --(constructors)--
        +KivaKitPanel()
        +KivaKitPanel(LayoutManager)
        --
        +Color colorBorder()
        +Color colorCaret()
        +Color colorComponentLabel()
        +Color colorDropdownBackground()
        +Color colorDropdownText()
        +Color colorLabel()
        +Color colorNote()
        +Color colorProgressBarBackground()
        +Color colorProgressBarForeground()
        +Color colorSelectionBackground()
        +Color colorSelectionText()
        +Color colorSeparator()
        +Color colorTableBackground()
        +Color colorTableHeaderBackground()
        +Color colorTableHeaderText()
        +Color colorTableText()
        +Color colorText()
        +Color colorTextAreaBackground()
        +Color colorTextFieldBackground()
        +Color colorTextFieldText()
        +Color colorTitle()
        +Color colorTitleBackground()
        +JComboBox<T> configure(JComboBox<T> dropdown, int preferredWidth)
        +JTextField configure(JTextField)
        +JButton configure(JButton)
        +JCheckBox configure(JCheckBox)
        +JLabel configure(JLabel)
        +JTableHeader configure(JTableHeader)
        +JComboBox<T> configure(JComboBox<T> dropdown)
        +JEditorPane configure(JEditorPane)
        +JTable configure(JTable)
        +JLabel configureComponentLabel(JLabel)
        +JPanel configureContainerPanel(JPanel)
        +void debugColor()
        +Font fontComponent()
        +Font fontTitle()
        +KivaKitPanel margins(int width)
        +Margins margins()
        +Color progressBarBackground()
        +Font smallComponentFont()
        +Font tableFont()
        #Box verticalCenter(JComponent)
        --(checks)--
        +boolean isDark()
        --(collection)--
        +JList<T> configure(JList<T>)
        --(factory)--
        +JButton newButton(String text, ActionListener)
        +JButton newButton(String text)
        +JButton newButton(String text, Source<Boolean> enabled, ActionListener)
        +JLabel newCellRenderer(String text, boolean isSelected)
        +JCheckBox newCheckBox(String text)
        +JLabel newComponentLabel(String text)
        +KivaKitPanel newContainerPanel()
        +KivaKitPanel newContainerPanel(LayoutManager)
        +JComboBox<T> newDropDown(T[] values, Source<Boolean> enabled)
        +JComboBox<T> newDropDown(ComboBoxModel<T>)
        +JComboBox<T> newDropDown(ComboBoxModel<T>, Source<Boolean> enabled)
        +JComboBox<T> newDropDown(T[] values)
        +JSeparator newHorizontalSeparator()
        +JLabel newInformationLabel(String text)
        +JLabel newLabel(String text)
        +JLabel newListCellRenderer(String text, boolean isSelected)
        +JLabel newNote(String text)
        +JProgressBar newProgressBar()
        +JScrollPane newScrollPane(JComponent child, AdjustmentListener)
        +JTextField newSearchField()
        +JTextField newSearchField(Source<Boolean> enabled)
        +KivaKitPanel newShadedPanel()
        +KivaKitPanel newShadedSubPanel()
        +JLabel newSmallFadedLabel(String text)
        +JTabbedPane newTabbedPane()
        +JTextField newTextField(int characters)
        +JTextField newTextField()
        +JTextField newTextField(int characters, Source<Boolean> enabled)
        +JTextField newTextField(Source<Boolean> enabled)
        +JSeparator newVerticalSeparator()
        +JSplitPane newVerticalSplitPane(JPanel top, JPanel bottom)
        --(functional)--
        +Color colorFadedText()
        +Color colorShadedPanel()
        +Color colorShadedSubPanel()
        +KivaKitPanel configureShadedPanel(KivaKitPanel)
        +KivaKitPanel configureShadedSubPanel(KivaKitPanel)
        +Font fixedWidthFont()
        +Font fontFixedWidth()
        --(messaging)--
        +Color colorInformation()
        +Color colorInformationLabel()
        +Color colorQuibble()
        +Color colorWarning()
        +void popupInformation(JFrame, String title, String message)
        --(search)--
        +JTextField configureSearchField(JTextField)
        --(status)--
        +Color colorError()
        +Color colorSuccess()
    }
    
@enduml

